--- a/GrapheneTrace.Client/wwwroot/index.html
+++ b/GrapheneTrace.Client/wwwroot/index.html
@@ -8,6 +8,7 @@
     <base href="/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
+    <link rel="stylesheet" href="_content/Blazor.Bootstrap/blazor.bootstrap.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="GrapheneTrace.Client.styles.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
@@ -27,6 +28,8 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="_content/Blazor.Bootstrap/blazor.bootstrap.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
 
