--- a/GrapheneTrace.Client/wwwroot/index.html
+++ b/GrapheneTrace.Client/wwwroot/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="stylesheet" href="_content/Blazor.Bootstrap/blazor.bootstrap.css" />
+    <link rel="stylesheet" href="_content/MudBlazor/MudBlazor.min.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="GrapheneTrace.Client.styles.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
@@ -29,6 +31,7 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
     <script src="_content/Blazor.Bootstrap/blazor.bootstrap.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
